--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "po-key-package-template"
+name = "gamedle"
 version = "0.1.0"
 description = ""
 authors = ["karl robeck alferez <karlalferezfx@gmail.com>"]
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 typer = {extras = ["all"], version = "^0.9.0"}
+pypox = "^1.4.1"
+jinja2 = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
